Updated some components to be responsive

--- a/src/components/sign-up form/sign-up-form.styles.scss
+++ b/src/components/sign-up form/sign-up-form.styles.scss
@@ -7,3 +7,10 @@
         margin: 10px 0;
     }
 }
+
+@media screen and (max-width: 768px) {
+    .sign-up-container {
+        display: inline-block;
+        max-width: 100%;
+    }
+}
