--- a/src/components/category-preview/category-preview.styles.scss
+++ b/src/components/category-preview/category-preview.styles.scss
@@ -9,6 +9,22 @@
     cursor: pointer;
   }
 
+  :hover .title {
+    text-decoration: underline;
+  }
+
+  .more {
+    font-size: 30px;
+    margin: auto;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    padding-top: 50px;
+    text-decoration: underline;
+  }
+
   .preview {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -35,8 +51,13 @@
   @media screen and (max-width: 480px) {
     /* Further adjust styles for screens with a maximum width of 480px */
     .title {
-      font-size: 20px;
+      font-size: 25px;
       margin-bottom: 15px;
+    }
+
+    .more {
+      font-size: 20px;
+      padding-top: 5px;
     }
     
     .preview {
