--- a/src/components/sign-in-form/sign-in-form.styles.scss
+++ b/src/components/sign-in-form/sign-in-form.styles.scss
@@ -12,3 +12,10 @@
         justify-content: space-between;
     }
 }
+
+@media screen and (max-width: 768px) {
+    .sign-up-container {
+        display: inline-block;
+        max-width: 100%;
+    }
+}
