--- a/src/routes/category/category.styles.scss
+++ b/src/routes/category/category.styles.scss
@@ -10,3 +10,21 @@
     margin-bottom: 25px;
     text-align: center;
 }
+
+@media screen and (max-width: 768px) {
+    /* Adjust styles for screens with a maximum width of 768px */
+    .category-container {
+      grid-template-columns: repeat(2, 1fr);
+      column-gap: 10px;
+      margin-bottom: 20px;
+    }
+  }
+  
+  @media screen and (max-width: 480px) {
+    /* Further adjust styles for screens with a maximum width of 480px */
+    .category-container {
+      grid-template-columns: repeat(1, 1fr);
+      column-gap: 0;
+      margin-bottom: 15px;
+    }
+  }
